[project]
name = "wcm"
description = "Manage WireGuard VPN peers (both server and clients)"
version = "2024.12.0a"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.1",
]
authors = [
    {name = "Fedor Lyanguzov"},
]

[dependency-groups]
dev = [
  "pytest",
  "black",
  "flake8"
]

[project.scripts]
example = "wcm.__main__:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[tool.setuptools]
packages = ["wcm"]

